@@ -76,6 +76,8 @@
 	Fixed display issues or a crash when using a terminal with more than 32768
 	color pairs.  Thanks to iboggs and itshog.
 
+	Fixed performance degradation after preview consumes lots of color pairs.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
